--- a/package.json
+++ b/package.json
@@ -8,20 +8,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "element-plus": "^2.2.12",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3",
-    "vuex": "^4.0.2"
+    "axios": "^1.1.3",
+    "element-plus": "^2.2.18",
+    "lodash-es": "^4.17.21",
+    "normalize.css": "^8.0.1",
+    "three": "^0.145.0",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@types/node": "^18.6.5",
-    "@vitejs/plugin-vue": "^3.0.1",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^18.8.0",
+    "@types/three": "^0.144.0",
+    "@vitejs/plugin-vue": "^3.1.2",
     "less": "^4.1.3",
-    "typescript": "^4.7.4",
-    "unplugin-auto-import": "^0.11.1",
-    "unplugin-vue-components": "^0.22.3",
-    "vite": "^3.0.4",
-    "vue-tsc": "^0.39.5"
+    "typescript": "^4.8.4",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.8",
+    "vite": "^3.1.8",
+    "vue-tsc": "^1.0.8"
   }
 }
